@startuml CURA_ERD

!define ENTITY entity
!define PK <b><color:red>PK</color></b>
!define FK <b><color:blue>FK</color></b>

skinparam backgroundColor #FAFAFA
skinparam entity {
    BackgroundColor #E8F4FD
    BorderColor #2196F3
    FontSize 12
}

ENTITY "RFID_CHIPS" as rfid {
    PK id : INTEGER
    chip_id : VARCHAR(50)
    weekday : VARCHAR(20)
    is_active : BOOLEAN
    --
    CHECK: weekday IN ('MONDAY'...'SUNDAY')
    DEFAULT: is_active = true
}

ENTITY "LOCATIONS" as locations {
    PK id : INTEGER
    street : VARCHAR(255) <<NOT NULL>>
    house_number : VARCHAR(10) <<NOT NULL>>
    postal_code : VARCHAR(10) <<NOT NULL>>
    city : VARCHAR(100) <<NOT NULL>>
    floor : VARCHAR(10)
}

ENTITY "MEDICATIONS" as medications {
    PK id : INTEGER
    name : VARCHAR(255) <<NOT NULL>>
    active_ingredient : VARCHAR(255)
}

ENTITY "CAREGIVERS" as caregivers {
    PK id : INTEGER
    name : VARCHAR(255) <<NOT NULL>>
    phone_number : VARCHAR(50)
    email : VARCHAR(255)
    FK location_id : INTEGER
}

ENTITY "PATIENTS" as patients {
    PK id : INTEGER
    name : VARCHAR(255) <<NOT NULL>>
    age : INTEGER
    FK location_id : INTEGER
    phone_number : VARCHAR(50)
    email : VARCHAR(255)
    --
    CHECK: 0 < age < 150
}

ENTITY "MEDICATION_PLANS" as medplan {
    PK id : INTEGER
    FK patient_id : INTEGER <<NOT NULL>>
    FK medication_id : INTEGER <<NOT NULL>>
    FK caregiver_id : INTEGER
    weekday_flags : INTEGER
    day_time_flags : INTEGER
    quantity : INTEGER
    valid_from : DATE <<NOT NULL>>
    valid_to : DATE
    notes : TEXT
    is_active : BOOLEAN
    --
    CHECK: weekday_flags 0-127
    CHECK: day_time_flags 0-15
    CHECK: quantity > 0
    DEFAULT: is_active = true
}

' Relationships (1:N)
locations ||--o{ caregivers : "works_at"
locations ||--o{ patients : "lives_in"
patients ||--o{ medplan : "has"
medications ||--o{ medplan : "used_in"
caregivers ||--o{ medplan : "manages"

note top of rfid : RFID for\nWeekday Detection

note right of medplan : **Binary Flags System:**\n• **Weekdays (0-127):**\n  Sun=1, Mon=2, Tue=4, Wed=8,\n  Thu=16, Fri=32, Sat=64\n• **Day Times (0-15):**\n  Morning=1, Noon=2,\n  Afternoon=4, Evening=8\n\n**Examples:**\n• Daily: 127\n• Weekdays: 62\n• Mon+Wed+Fri: 42\n• Morning+Evening: 9

note bottom of locations : Addresses for\nPatients & Caregivers

@enduml